--- a/views/about.html
+++ b/views/about.html
@@ -47,6 +47,10 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h2>Other Questions and Answers</h2>
 
+<h3>Can you accommodate my allergies or other food restrictions?</h3>
+
+<p>I likely can.  Please email me with your allergies and/or restrictions and I will let you know if I will be able to accommodate these.  Please note that I do list the ingredients for the meals on the order page.</p>
+
 <h3>What cooking oils do you use?</h3>  
 <p>
 Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is clarified butter, which has nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins.  Both ghee and butter contain only trace amounts of lactose, so they are generally well-tolerated by those who are lactose intollerant.  Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste leaving it well suited to use in most recipes.  
@@ -58,7 +62,7 @@ Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is 
 
 <h3>Do you make your own soup stock?</h3>
 <p>
-Yes, I do. I make my chicken and beef stocks by slow cooking bones.  This is known as a bone broth.  I find this a good way to get extra calcium in my diet.  Bone broth is also rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat.
+Yes, I do. I make my chicken and beef stocks by slow cooking the bones in water and call these bone broths.  The only other ingredients besides the bones and water are apple cider vinegar and possibly onions, garlic, carrots and celery.  If I am maing a low FODMAP soup, I will not use the onions and garlic.  Bone broths are a good source of calcium.  They are also rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat.
 </p>
 
 <h3>What sweeteners do you use?</h3>
