--- a/views/index.html
+++ b/views/index.html
@@ -109,11 +109,36 @@
               <p>Please have cash ready for us on November 4th.  You can pay up front or in weekly installments of $120 every Tuesday.</p>
             </div>
           </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" id="next" class="btn btn-primary">Next</button>
         <button type="button" id="cancel" class="btn btn-default" style="display: none">Cancel</button>
         <button type="button" id="close" class="btn btn-primary" style="display: none" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="confirmation" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Confirm Order</h4>
+      </div>
+
+      <div class="modal-body">
+        <ul id="list"></ul>
+        <form id="confirm_form">
+          <div class="form-group">
+            <label for="email">Your Email:</label>
+            <input type="text" id="order_email" name="email" class="form-control" />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="confirm" class="btn btn-primary">Confirm</button>
       </div>
     </div>
   </div>
