--- a/views/about.html
+++ b/views/about.html
@@ -49,7 +49,7 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h3>Can you accommodate my allergies or other food restrictions?</h3>
 
-<p>I likely can.  Please email me with your allergies and/or restrictions and I will let you know if I will be able to accommodate these.  Please note that I do list the ingredients for the meals on the order page.</p>
+<p>I likely can.  Please email me regarding your allergies and/or restrictions and I will let you know if I will be able to accommodate them.  Please note that I list the ingredients for the meals on the order page.</p>
 
 <h3>What cooking oils do you use?</h3>  
 <p>
@@ -75,7 +75,7 @@ Yes, I do. I make my chicken and beef stocks by slow cooking the bones in water 
 
 <p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation).  If I have labeled a meal “Low FODMAP” it does not contain any foods higher in FODMAPs (fermentable oligosaccharides, disaccharides, monosaccharides and polyols).  FODMAPs are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
 
-<p>The Autoimmune Paleo Protocol is a stricter version of the paleo diet, in which nightshade fruits and vegetables, eggs, nuts, and seeds are also avoided.  This diet is often followed by people who have an autoimmune disease, such as rheumatoid arthritis or multiple sclerosis, and want to see if this stricter diet will improve their symptoms.  </p>
+<p>The Autoimmune Paleo Protocol is a stricter version of the paleo diet, in which nightshade fruits and vegetables, nuts, seeds and sometimes eggs are also avoided.  This diet is often followed by people who have an autoimmune disease, such as rheumatoid arthritis or multiple sclerosis, and want to see if this stricter diet will improve their symptoms.  </p>
 
 <p>I am not cooking for enough people at this time to provide enough options to cater to each of these more restricted versions of the paleo diet, but I wanted to give people an idea of what else is out there that may be of benefit to them in the future. </p>
 
