--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
       </p>
 
     <p>
-    The program is designed to provide you with lunch and dinner for 6 days of the week.   You'll get to choose 4 entrées and 2 soup and salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrées, salads and soups you want, or receive one of each by default.</p>
+    The program is designed to provide you with lunch and dinner for 6 days of the week for 4 weeks total.   You'll get to choose 4 entrées and 2 soup and salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrées, salads and soups you want by placing an order on this website, or receive one of each by default.</p>
 
     <h2>What it Costs</h2>
     <table class="table">
