--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
     <p>Twice a week, throughout the month of November, I will be preparing delicious, nutrient-dense meals that adhere to the paleo diet principles.</p>
 
         <p>
-        Since we don't have our own farm yet, ingredients for these meals will be sourced as locally, organically and ethically as possible (often from small farms in the lower mainland, Fraser Valley and on Vancouver Island).   I will be posting updates to the <a href="https://www.facebook.com/pages/Karma-Farma/316899365161155">Karma Farma Facebook Page</a> so you can follow along to find out exactly where I get my ingredients from and provide comments if you have any good food sources for me to check out.
+        Since we don't have our own farm yet, ingredients for these meals will be sourced as locally, organically and ethically as possible (usually from small farms in the Lower Mainland, Fraser Valley and on Vancouver Island).   I will be posting updates to the <a href="https://www.facebook.com/pages/Karma-Farma/316899365161155">Karma Farma Facebook Page</a> so you can follow along to find out exactly where I get my ingredients from and provide comments if you have any good food sources for me to check out.
       </p>
 
     <p>
