--- a/views/index.html
+++ b/views/index.html
@@ -53,11 +53,7 @@
         </ul>
         <div class="tab-content">
           <div id="step1" class="tab-pane active">
-            <form id="register" action="/users" method="post">
-              {{#error}}
-                <div class="alert alert-danger">{{error}}</div>
-              {{/error}}
-
+            <form id="register">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="text" id="email" name="email" class="form-control" />
@@ -77,6 +73,8 @@
                 <label for="address">Notes/Allergies:</label>
                 <textarea name="address" class="form-control" placeholder="e.g. Come to the 4th floor and leave the meals in the cooler at the reception desk.  I'm allergic to nuts."></textarea>
               </div>
+
+              <input type="submit" style="position: absolute; left: -9999px" />
             </form>
           </div>
           <div id="step2" class="tab-pane">
@@ -116,7 +114,7 @@
       <div class="modal-footer">
         <button type="button" id="next" class="btn btn-primary">Next</button>
         <button type="button" id="cancel" class="btn btn-default" style="display: none">Cancel</button>
-        <button type="button" id="close" class="btn btn-primary" style="display: none" data-dismiss="modal">Got it!</button>
+        <button type="button" id="close" class="btn btn-primary" style="display: none" data-dismiss="modal">OK</button>
       </div>
     </div>
   </div>
@@ -143,6 +141,7 @@
             <label for="email">Your Email:</label>
             <input type="text" id="order_email" name="email" class="form-control" />
           </div>
+          <input type="submit" style="position: absolute; left: -9999px" />
         </form>
       </div>
       <div class="modal-footer">
