--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@
               <div class="alert alert-success" style="margin-top: 15px">
                 <h2>Ok!  You're registered!</h2>
               </div>
-              <p>Please have cash ready for us on November 4th.  You can pay up front or in weekly installments of $120 every Tuesday.</p>
+              <p>Please have cash ready for us on November 4th.  You can pay $480 up front or in weekly installments of $120 every Tuesday delivery day.</p>
             </div>
           </div>
         </div>
@@ -134,6 +134,10 @@
         </div>
         <div class="alert alert-warning" id="order_warning" style="display: none">
           You have selected <span id="warning_count"></span> out of 8 items.  We'll pick for you if you like.
+        </div>
+        <div class="alert alert-success" id="order_placed" style="display: none">
+          <h2>Thanks! Your order has been placed!</h2>
+          <p>Selection for the November 7 delivery will open on November 3 so remember to come back then.</p>
         </div>
         <ul id="list"></ul>
         <form id="confirm_form">
