Notes field mislabeled

--- a/views/index.html
+++ b/views/index.html
@@ -70,8 +70,8 @@
               </div>
 
               <div class="form-group">
-                <label for="address">Notes/Allergies:</label>
-                <textarea name="address" class="form-control" placeholder="e.g. Come to the 4th floor and leave the meals in the cooler at the reception desk.  I'm allergic to nuts."></textarea>
+                <label for="notes">Notes/Allergies:</label>
+                <textarea id="notes" name="notes" class="form-control" placeholder="e.g. Come to the 4th floor and leave the meals in the cooler at the reception desk.  I'm allergic to nuts."></textarea>
               </div>
 
               <input type="submit" style="position: absolute; left: -9999px" />
