--- a/views/index.html
+++ b/views/index.html
@@ -133,7 +133,7 @@
           Your email wasn't found.  You need to <a id="register_link" style="cursor: pointer">register</a> before you can order.
         </div>
         <div class="alert alert-warning" id="order_warning" style="display: none">
-          You have selected <span id="warning_count"></span> out of 8 items.  We'll pick for you if you like.
+          You have selected <span id="warning_count"></span> out of 8 items.  We'll pick the rest for you.
         </div>
         <div class="alert alert-success" id="order_placed" style="display: none">
           <h2>Thanks! Your order has been placed!</h2>
@@ -149,8 +149,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" id="cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" id="confirm" class="btn btn-primary">Confirm</button>
+        <button type="button" id="order_cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" id="order_confirm" class="btn btn-primary">Confirm</button>
         <button type="button" id="order_close" class="btn btn-primary" data-dismiss="modal" style="display: none">Close</button>
       </div>
     </div>
