--- a/views/index.html
+++ b/views/index.html
@@ -78,6 +78,11 @@
             </form>
           </div>
           <div id="step2" class="tab-pane">
+            <div id="registered" class="alert alert-success" style="margin-top: 15px; display: none">
+              <h2>Ok!  You're registered!</h2>
+              <p>You can place your order on the homepage now for your first delivery.</p>
+            </div>
+
             <div id="choose">
               <h2>Select a Payment Option</h2>
 
@@ -99,13 +104,9 @@
                 <div id="qr" style="margin-left: 150px; margin-bottom: 15px;"></div>
                 <p>Need to get some Bitcoins?  Try <a href="http://circle.com/" target="_blank">circle.com</a>. They take VISA.</p>
               </div>
-              <button id="received" class="btn btn-success" style="display: none; width: 100%; margin-top: 15px;">Payment received!  You're registered!</button>
             </div>
 
             <div id="pay_cash" style="display: none">
-              <div class="alert alert-success" style="margin-top: 15px">
-                <h2>Ok!  You're registered!</h2>
-              </div>
               <p>Please have cash ready for us on November 4th.  You can pay $480 up front or in weekly installments of $120 every Tuesday delivery day.</p>
             </div>
           </div>
