--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
 </div>
 
 <h2><span class="fa fa-calendar"> November 4 Delivery</span> <small>Selection open until midnight, November 2</small></h2>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Every delivery will have a new menu so keep checking back every few days!</h4>
 
 <div class="row">
   <div class="col-md-6">
