--- a/views/about.html
+++ b/views/about.html
@@ -53,7 +53,7 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h3>What cooking oils do you use?</h3>  
 <p>
-Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is clarified butter, which has nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins.  Both ghee and butter contain only trace amounts of lactose, so they are generally well-tolerated by those who are lactose intollerant.  Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste leaving it well suited to use in most recipes.  
+Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is clarified butter, which has nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins.  Both ghee and butter contain only trace amounts of lactose, so they are generally well-tolerated by those who are lactose intollerant.  Expeller-pressed coconut oil is steam deodorized, which removes the coconut taste, leaving it well suited to use in most recipes.  
 </p>
 
 <h3>What about the oils in your salad dressings?</h3>
