--- a/views/index.html
+++ b/views/index.html
@@ -11,13 +11,13 @@
   </div>
 </div>
 
-<h2><span class="fa fa-calendar"> November 4 Delivery</span> <small>Selection open until midnight, November 2</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Every delivery will have a new menu so keep checking back every few days!</h4>
+<h2><span class="fa fa-calendar"> Menu for November 4-6</span> <small>Selection open until midnight, November 2</small></h2>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals -- 4 entr&eacute;es, 2 soup/salad combos. Your selection will be delivered on November 4.  The next menu for November 7-9 will be available on November 3.</h4>
 
 <div class="row">
   <div class="col-md-6">
     <div class="items">
-      <h3>Entrees <small><span class="count">0</span> / <span class="max">4</span></small></h3>
+      <h3>Entr&eacute;es <small><span class="count">0</span> / <span class="max">4</span></small></h3>
       <div id="entrees"></div>
     </div>
   </div>
