--- a/views/about.html
+++ b/views/about.html
@@ -2,6 +2,13 @@
   <div class="col-md-6">
     <h1 style="margin-top: 0">How it Works</h1>
 
+    <ul>
+      <li>48 meals for the month, $10 each</li>
+      <li>12 meals per week</li>
+      <li>Deliveries on Tuesdays and Fridays</li>
+      <li>6 meals per delivery</li>
+    </ul>
+
     <p>Twice a week, throughout the month of November, I will be preparing delicious, nutrient-dense meals that adhere to the paleo diet principles.</p>
 
         <p>
@@ -9,7 +16,7 @@
       </p>
 
     <p>
-    The program is designed to provide you with lunch and dinner for 6 days of the week for 4 weeks total.   You'll get to choose 4 entrées and 2 soup and salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrées, salads and soups you want by placing an order on this website, or receive one of each by default.</p>
+    The program is designed to provide you with lunch and dinner for 6 days of the week for 4 weeks total.   You'll get to choose 4 entrées and 2 soup/salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrées, salads and soups you want by placing an order on this website, or receive one of each by default.</p>
 
     <h2>What it Costs</h2>
     <table class="table">
