--- a/views/index.html
+++ b/views/index.html
@@ -56,6 +56,11 @@
           <div id="step1" class="tab-pane active">
             <form id="register">
               <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" class="form-control" />
+              </div>
+
+              <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="text" id="email" name="email" class="form-control" />
               </div>
