--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <div>
     <h1>November 2014 Trial</h1>
     <p>
-    Home-cooked, delicious, nutrient-dense, paleo diet meals with local, organic, ethically sourced ingredients, delivered to your home or office twice a week.  New menu to choose from twice a week!
+    Home-cooked, delicious, nutrient-dense, paleo diet meals with local, organic, ethically sourced ingredients, delivered to your home or office twice a week.  There will be a new menu to choose from for every delivery!
     </p>
     <a href="/about"><button type="button" class="btn btn-primary">Learn More »</button></a>
     <h2><span class="lead"><b id="users">{{users}}</b></span> spots left. Sign up by October 20.</h2>
