--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 </div>
 
 <h2><span class="fa fa-calendar"> Menu for November 7-9</span> <small>Selection open until midnight Wednesday, November 5</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 7.  The next menu for November 11-13 will be available on November 10.</h4>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 7 and the next menu will be available on November 6.</h4>
 
 <div class="row">
   <div class="col-md-6">
