Register button toggle

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,9 @@
     Home-cooked, delicious, nutrient-dense, paleo diet meals with local, organic, ethically sourced ingredients, delivered to your home or office twice a week.  There will be a new menu to choose from for every delivery!
     </p>
     <a href="/about"><button type="button" class="btn btn-primary">Learn More »</button></a>
+    {{#register}}
+    <button id="register-button" type="button" class="btn btn-primary">Register Now</button>
+    {{/register}}
   </div>
 </div>
 
