--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
   </div>
 </div>
 
-<h2><span class="fa fa-calendar"> Menu for November 14-17</span> <small>Selection open until midnight Wednesday, November 12</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 14 and the next menu will be available on November 13.</h4>
+<h2><span class="fa fa-calendar"> Menu for November 18-20</span> <small>Selection open until midnight, Sunday November 16</small></h2>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 18 and the next menu will be available on November 17.</h4>
 
 <div class="row">
   <div class="col-md-6">
