--- a/views/index.html
+++ b/views/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <div id="pay_cash" style="display: none">
-              <p>Please have cash ready for us on November 4th.  You can pay $480 up front or in weekly installments of $120 every Tuesday delivery day.</p>
+              <p>Please have cash ready for us at your first delivery.  You can pay $480 up front or in weekly installments of $120 every Tuesday delivery day.</p>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="alert alert-success" id="order_placed" style="display: none">
           <h2>Thanks! Your order has been placed!</h2>
-          <p>Selection for the November 7 delivery will open on November 3 so remember to come back then.</p>
+          <p>Selection for the November 21 delivery will open on November 19 so remember to come back then.</p>
         </div>
         <ul id="list"></ul>
         <form id="confirm_form">
