--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <h2><span class="fa fa-calendar"> Menu for November 21-23</span> <small>Selection open until midnight, Wednesday November 19</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 21 and the next menu will be available on November 20.</h4>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 21. The next menu will be available November 22 (sorry for the delay).</h4>
 
 <div class="row">
   <div class="col-md-6">
