adding Nov 28 images and menu

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
   </div>
 </div>
 
-<h2><span class="fa fa-calendar"> Menu for November 25-27</span> <small>Selection open until midnight, Sunday November 23</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 25. The next menu will be available November 24.</h4>
+<h2><span class="fa fa-calendar"> Menu for November 28-30</span> <small>Selection open until midnight, Wednesday November 26</small></h2>
+<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 28.</h4>
 
 <div class="row">
   <div class="col-md-6">
@@ -145,7 +145,6 @@
         </div>
         <div class="alert alert-success" id="order_placed" style="display: none">
           <h2>Thanks! Your order has been placed!</h2>
-          <p>Selection for the November 25 delivery will open on November 20 so remember to come back then.</p>
         </div>
         <ul id="list"></ul>
         <form id="confirm_form">
