Get rid of soups and salads

--- a/views/index.html
+++ b/views/index.html
@@ -18,20 +18,15 @@
 <div class="row">
   <div class="col-md-6">
     <div class="items">
-      <h3>Entr&eacute;es <small><span class="count">0</span> / <span class="max">4</span></small></h3>
-      <div id="entrees"></div>
+      <h3>Selections <small><span class="count">0</span> / <span class="max">4</span></small></h3>
+      <div id="entrees_0"></div>
     </div>
   </div>
 
   <div class="col-md-6">
     <div class="items">
-      <h3>Soups <small><span class="count">0</span> / <span class="max">2</span></small></h3>
-      <div id="soups"></div>
-    </div>
-
-    <div class="items">
-      <h3>Salads <small><span class="count">0</span> / <span class="max">2</span></small></h3>
-      <div id="salads"></div>
+      <h3>&nbsp;</h3>
+      <div id="entrees_1"></div>
     </div>
   </div>
 </div>
