--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="col-md-6">
     <div class="items">
-      <h3>Selections <small><span class="count">0</span> / <span class="max">4</span></small></h3>
+      <h3>Selections <small style="display: none"><span class="count">0</span> / <span class="max">4</span></small></h3>
       <div id="entrees_0"></div>
     </div>
   </div>
