--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,12 @@
 
 <div class="jumbotron">
   <div>
-    <h1>November 2014 Trial <small>(Registration Closed)</small></h1>
-    <p>
-    Home-cooked, delicious, nutrient-dense, paleo diet meals with local, organic, ethically sourced ingredients, delivered to your home or office twice a week.  There will be a new menu to choose from for every delivery!
-    </p>
+    <h1>December 2014</h1>
+    <p>Order week-by-week, &agrave; la carte style, 3 items minimum.</p>
+    <p>There will be three delivery dates:  Dec. 2, Dec. 9, and Dec. 16 (the first three Tuesdays of the month).</p>
+    <p>Please place your orders by the Sunday before.  You can pay as you go with Bitcoin through this website (preferred) or I'll bill you by the 16th and you can pay cash, cheque, or Interac e-Transfer.</p>
+    <p>This program is only available for existing clients.  If you would like to become a client, please email to check if I currently have room for you.</p>
+    <p>Thank you, Chelsea</p>
     <a href="/about"><button type="button" class="btn btn-primary">Learn More »</button></a>
     {{#register}}
     <button id="register-button" type="button" class="btn btn-primary">Register Now</button>
@@ -12,13 +14,13 @@
   </div>
 </div>
 
-<h2><span class="fa fa-calendar"> Menu for November 28-30</span> <small>Selection open until midnight, Wednesday November 26</small></h2>
-<h4><span class="glyphicon glyphicon-info-sign"></span> Choose 8 items, which covers 6 meals (4 entr&eacute;es, 2 soup/salad combos). Your selection will be delivered on November 28.</h4>
+<h2><span class="fa fa-calendar"> Menu for Tuesday December 2 Delivery</span> <small>Selection open until midnight, Sunday November 30</small></h2>
 
 <div class="row">
+  <div class="count" style="display: none"></div>
   <div class="col-md-6">
     <div class="items">
-      <h3>Selections <small style="display: none"><span class="count">0</span> / <span class="max">4</span></small></h3>
+      <h3>Selections </h3>
       <div id="entrees_0"></div>
     </div>
   </div>
