--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+    <img class="pull-right" src="/img/chelsea.jpg" style="margin-left: 15px" />
+
     <h1 style="margin-top: 0">How it Works</h1>
 
     <ul>
@@ -10,9 +10,12 @@
 
     <p>Home-cooked, delicious, nutrient-dense meals that adhere to the paleo diet.</p>
 
-        <p>
-        Since we don't have our own farm yet, ingredients for these meals will be sourced as locally, organically and ethically as possible (usually from small farms in the Lower Mainland, Fraser Valley and on Vancouver Island).
-      </p>
+    <p>
+      Since we don't have our own farm yet, ingredients for these meals will be sourced as locally, organically and ethically as possible (usually from small farms in the Lower Mainland, Fraser Valley and on Vancouver Island).
+    </p>
+
+  <div class="col-md-6 text-right">
+  </div>
 
 <h2>Delivery</h2>
 
