Register with Chelsea

--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
 
       <div class="modal-body">
         <div class="alert alert-danger" id="not_registered" style="display: none">
-          Your email wasn't found.  You need to <a id="register_link" style="cursor: pointer">register</a> before you can order.
+          Your email wasn't found.  Please contact <a href="mailto:sea.green@gmail.com">sea.green@gmail.com</a> if you would like to register.
         </div>
         <div class="alert alert-warning" id="order_warning" style="display: none">
           You selected less than 3 items.  There will be a $10 delivery charge.
