--- a/views/about.html
+++ b/views/about.html
@@ -5,13 +5,13 @@
     <ul>
       <li>order week-by-week, à la carte style</li>
       <li>each item $10</li>
-      <li>order 3 items minimum for free delivery</li>
+      <li>order 4 items minimum for free delivery</li>
     </ul>
 
     <p>Home-cooked, delicious, nutrient-dense meals that adhere to the paleo diet.</p>
 
     <p>
-      Since we don't have our own farm yet, ingredients for these meals will be sourced as locally, organically and ethically as possible (usually from small farms in the Lower Mainland, Fraser Valley and on Vancouver Island).
+      We are embarking on our first year of farming on our organic, multi-locational urban farm, Yummy Yards.  We already have a few of our own winter harvests on the menu.  Look out for more Yummy Yards crops on the menu as the growing season really takes off this spring!  All other ingredients are sourced as locally, organically and ethically as possible (usually from small farms in the Lower Mainland, Fraser Valley and on Vancouver Island).
     </p>
 
   <div class="col-md-6 text-right">
@@ -20,14 +20,14 @@
 <h2>Delivery</h2>
 
 <p>
-For the month of December 2014 there are 3 delivery dates: Dec. 2, Dec. 9, and Dec. 16 (the first three Tuesdays of the month).  Deliveries will be made between 9am and 12pm.  At this time, we can only deliver to Richmond and Vancouver.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.   All food is designed to stay fresh in the refrigerator for at least 3 days.   Many of the meals freeze well and are marked to indicate this, so if you don't eat them within the 3 days, you can pop them in the freezer and eat them later.  All food will be delivered in recyclable or compostable containers that you will keep (no more returning containers). 
+Deliveries will be made every Tuesday between 9am and 12pm.  At this time, we can only deliver to Richmond and Vancouver.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.   All food is designed to stay fresh in the refrigerator for at least 3 days.  Many of the meals freeze well and are marked to indicate this, so if you don't eat them within the 3 days, you can pop them in the freezer and eat them later.  Please reheat the food to a temperature of 74C (165F) before eating.  All food will be delivered in recyclable or compostable containers. 
 </p>
 
 
 <h2>The Paleo Diet</h2>
 
 <p>
-A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega-6 vegetable oils and other processed foods.   Plenty of vegetables, fruits, meat, fish, seeds and nuts are eaten instead.  This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient-dense foods in their diet to see how it makes them feel.  These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
+A paleo diet excludes grains, dairy, legumes, refined sweeteners, high omega-6 vegetable oils and other processed foods.   Plenty of vegetables, fruits, meat, fish, seeds and nuts are eaten instead.  This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient-dense foods in their diet to see how it makes them feel.  These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
 
 <p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
 <script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
@@ -40,7 +40,7 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h3>What cooking oils do you use?</h3>  
 <p>
-Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is clarified butter, which has nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins.  Both ghee and butter contain only trace amounts of lactose, so they are generally well-tolerated by those who are lactose intollerant.  Expeller-pressed coconut oil is steam deodorized, which removes the coconut taste, leaving it well suited to use in most recipes.  
+Organic grass-fed butter or ghee, organic coconut oil are the main cooking oils I use.  The only other cooking oil I occassionally use is organic extra-virgin olive oil and only for low temperature cooking. 
 </p>
 
 <h3>What about the oils in your salad dressings?</h3>
