--- a/views/about.html
+++ b/views/about.html
@@ -20,7 +20,7 @@
 <h2>Delivery</h2>
 
 <p>
-Deliveries will be made every Tuesday between 9am and 12pm.  At this time, we can only deliver to Richmond and Vancouver.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.   All food is designed to stay fresh in the refrigerator for at least 3 days.  Many of the meals freeze well and are marked to indicate this, so if you don't eat them within the 3 days, you can pop them in the freezer and eat them later.  Please reheat the food to a temperature of 74C (165F) before eating.  All food will be delivered in recyclable or compostable containers. 
+Deliveries will be made every Tuesday between 9am and 12pm.  At this time, we can only deliver to Richmond and Vancouver.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.   All food is designed to stay fresh in the refrigerator for at least 3 days.  Many of the meals freeze well and are marked to indicate this, so if you don't eat them within the 3 days, you can pop them in the freezer and eat them later.  Please reheat the food to a temperature of 74C (165F) before eating.  All food will be delivered in recyclable or compostable containers.
 </p>
 
 
@@ -40,12 +40,12 @@ A paleo diet excludes grains, dairy, legumes, refined sweeteners, high omega-6 v
 
 <h3>What cooking oils do you use?</h3>  
 <p>
-Organic grass-fed butter or ghee, organic coconut oil are the main cooking oils I use.  The only other cooking oil I occassionally use is organic extra-virgin olive oil and only for low temperature cooking. 
+Organic, grass-fed butter or ghee and organic coconut oil are the main cooking oils I use.  The only other cooking oil I occassionally use is organic, extra-virgin olive oil and only for low temperature cooking.
 </p>
 
 <h3>What about the oils in your salad dressings?</h3>
 
-<p>Extra virgin olive oil is the main oil I use for salad dressings.  I also use sesame oil to flavour Asian salad dressings.  If mayonaise is used it's always homemade with avocado oil.  I do not use high omega-6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.  
+<p>Extra virgin olive oil is the main oil I use for salad dressings.  I also use sesame oil to flavour Asian salad dressings.  If mayonaise is used it's always homemade with avocado oil.  I do not use high omega-6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.
 
 <h3>Do you make your own soup stock?</h3>
 <p>
